err/servicecore.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/debug_log-0.3.egg-info'...
Listing './lib/python3.5/site-packages/debuglog'...
Listing './lib/python3.5/site-packages/jieba'...
Listing './lib/python3.5/site-packages/jieba/analyse'...
Listing './lib/python3.5/site-packages/jieba/finalseg'...
Listing './lib/python3.5/site-packages/jieba/posseg'...
Listing './lib/python3.5/site-packages/jieba-0.39.egg-info'...
Listing './lib/python3.5/site-packages/mmh3-2.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pybloomfiltermmap-0.3.15.egg-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/servicecore'...
Listing './lib/python3.5/site-packages/servicecore/contrib'...
Listing './lib/python3.5/site-packages/servicecore/contrib/dupfilter'...
Listing './lib/python3.5/site-packages/servicecore/contrib/hashdb'...
Listing './lib/python3.5/site-packages/servicecore/contrib/queue'...
Listing './lib/python3.5/site-packages/servicecore/contrib/segment'...
Listing './lib/python3.5/site-packages/servicecore/contrib/simhash'...
Compiling './lib/python3.5/site-packages/servicecore/contrib/simhash/mmh3simhash.py'...
***   File "./lib/python3.5/site-packages/servicecore/contrib/simhash/mmh3simhash.py", line 223
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/servicecore/core'...
Compiling './lib/python3.5/site-packages/servicecore/core/parameter.py'...
***   File "./lib/python3.5/site-packages/servicecore/core/parameter.py", line 36
    except KeyError, k:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/servicecore/data'...
Listing './lib/python3.5/site-packages/servicecore/data/dupfilter'...
Listing './lib/python3.5/site-packages/servicecore/data/segment'...
Listing './lib/python3.5/site-packages/servicecore/data/simhash'...
Listing './lib/python3.5/site-packages/servicecore/service'...
Listing './lib/python3.5/site-packages/servicecore-0.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
